Universität/Übersetzung und Analyse von Programmen/Projekte/Projekt_2/uap25_pro2_python/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FALSE
    TRUE

Grammar

Rule 0     S' -> expression
Rule 1     expression -> LET dexpr IN expression
Rule 2     expression -> ID
Rule 3     expression -> ID LPAREN aexpr RPAREN
Rule 4     expression -> expression AOP expression
Rule 5     expression -> LPAREN expression RPAREN
Rule 6     expression -> CONST
Rule 7     expression -> ID ASSIGN expression
Rule 8     expression -> expression SEMI expression
Rule 9     expression -> IF bexpr THEN expression ELSE expression
Rule 10    expression -> WHILE bexpr DO LBRACE expression RBRACE
Rule 11    aexpr -> expression
Rule 12    aexpr -> aexpr COMMA expression
Rule 13    dexpr -> ID LPAREN vexpr RPAREN LBRACE expression RBRACE
Rule 14    dexpr -> dexpr dexpr
Rule 15    vexpr -> ID
Rule 16    vexpr -> vexpr COMMA vexpr
Rule 17    bexpr -> LPAREN expression RPAREN
Rule 18    bexpr -> BOOL
Rule 19    bexpr -> bexpr LOP bexpr
Rule 20    bexpr -> expression RELOP expression

Terminals, with rules where they appear

AOP                  : 4
ASSIGN               : 7
BOOL                 : 18
COMMA                : 12 16
CONST                : 6
DO                   : 10
ELSE                 : 9
FALSE                : 
ID                   : 2 3 7 13 15
IF                   : 9
IN                   : 1
LBRACE               : 10 13
LET                  : 1
LOP                  : 19
LPAREN               : 3 5 13 17
RBRACE               : 10 13
RELOP                : 20
RPAREN               : 3 5 13 17
SEMI                 : 8
THEN                 : 9
TRUE                 : 
WHILE                : 10
error                : 

Nonterminals, with rules where they appear

aexpr                : 3 12
bexpr                : 9 10 19 19
dexpr                : 1 14 14
expression           : 1 4 4 5 7 8 8 9 9 10 11 12 13 17 20 20 0
vexpr                : 13 16 16

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . LET dexpr IN expression
    (2) expression -> . ID
    (3) expression -> . ID LPAREN aexpr RPAREN
    (4) expression -> . expression AOP expression
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . CONST
    (7) expression -> . ID ASSIGN expression
    (8) expression -> . expression SEMI expression
    (9) expression -> . IF bexpr THEN expression ELSE expression
    (10) expression -> . WHILE bexpr DO LBRACE expression RBRACE

    LET             shift and go to state 2
    ID              shift and go to state 3
    LPAREN          shift and go to state 4
    CONST           shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7

    expression                     shift and go to state 1

state 1

    (0) S' -> expression .
    (4) expression -> expression . AOP expression
    (8) expression -> expression . SEMI expression

    AOP             shift and go to state 8
    SEMI            shift and go to state 9


state 2

    (1) expression -> LET . dexpr IN expression
    (13) dexpr -> . ID LPAREN vexpr RPAREN LBRACE expression RBRACE
    (14) dexpr -> . dexpr dexpr

    ID              shift and go to state 11

    dexpr                          shift and go to state 10

state 3

    (2) expression -> ID .
    (3) expression -> ID . LPAREN aexpr RPAREN
    (7) expression -> ID . ASSIGN expression

    AOP             reduce using rule 2 (expression -> ID .)
    SEMI            reduce using rule 2 (expression -> ID .)
    $end            reduce using rule 2 (expression -> ID .)
    RPAREN          reduce using rule 2 (expression -> ID .)
    RELOP           reduce using rule 2 (expression -> ID .)
    COMMA           reduce using rule 2 (expression -> ID .)
    ELSE            reduce using rule 2 (expression -> ID .)
    THEN            reduce using rule 2 (expression -> ID .)
    LOP             reduce using rule 2 (expression -> ID .)
    DO              reduce using rule 2 (expression -> ID .)
    RBRACE          reduce using rule 2 (expression -> ID .)
    LPAREN          shift and go to state 12
    ASSIGN          shift and go to state 13


state 4

    (5) expression -> LPAREN . expression RPAREN
    (1) expression -> . LET dexpr IN expression
    (2) expression -> . ID
    (3) expression -> . ID LPAREN aexpr RPAREN
    (4) expression -> . expression AOP expression
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . CONST
    (7) expression -> . ID ASSIGN expression
    (8) expression -> . expression SEMI expression
    (9) expression -> . IF bexpr THEN expression ELSE expression
    (10) expression -> . WHILE bexpr DO LBRACE expression RBRACE

    LET             shift and go to state 2
    ID              shift and go to state 3
    LPAREN          shift and go to state 4
    CONST           shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7

    expression                     shift and go to state 14

state 5

    (6) expression -> CONST .

    AOP             reduce using rule 6 (expression -> CONST .)
    SEMI            reduce using rule 6 (expression -> CONST .)
    $end            reduce using rule 6 (expression -> CONST .)
    RPAREN          reduce using rule 6 (expression -> CONST .)
    RELOP           reduce using rule 6 (expression -> CONST .)
    COMMA           reduce using rule 6 (expression -> CONST .)
    ELSE            reduce using rule 6 (expression -> CONST .)
    THEN            reduce using rule 6 (expression -> CONST .)
    LOP             reduce using rule 6 (expression -> CONST .)
    DO              reduce using rule 6 (expression -> CONST .)
    RBRACE          reduce using rule 6 (expression -> CONST .)


state 6

    (9) expression -> IF . bexpr THEN expression ELSE expression
    (17) bexpr -> . LPAREN expression RPAREN
    (18) bexpr -> . BOOL
    (19) bexpr -> . bexpr LOP bexpr
    (20) bexpr -> . expression RELOP expression
    (1) expression -> . LET dexpr IN expression
    (2) expression -> . ID
    (3) expression -> . ID LPAREN aexpr RPAREN
    (4) expression -> . expression AOP expression
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . CONST
    (7) expression -> . ID ASSIGN expression
    (8) expression -> . expression SEMI expression
    (9) expression -> . IF bexpr THEN expression ELSE expression
    (10) expression -> . WHILE bexpr DO LBRACE expression RBRACE

    LPAREN          shift and go to state 17
    BOOL            shift and go to state 18
    LET             shift and go to state 2
    ID              shift and go to state 3
    CONST           shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7

    bexpr                          shift and go to state 15
    expression                     shift and go to state 16

state 7

    (10) expression -> WHILE . bexpr DO LBRACE expression RBRACE
    (17) bexpr -> . LPAREN expression RPAREN
    (18) bexpr -> . BOOL
    (19) bexpr -> . bexpr LOP bexpr
    (20) bexpr -> . expression RELOP expression
    (1) expression -> . LET dexpr IN expression
    (2) expression -> . ID
    (3) expression -> . ID LPAREN aexpr RPAREN
    (4) expression -> . expression AOP expression
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . CONST
    (7) expression -> . ID ASSIGN expression
    (8) expression -> . expression SEMI expression
    (9) expression -> . IF bexpr THEN expression ELSE expression
    (10) expression -> . WHILE bexpr DO LBRACE expression RBRACE

    LPAREN          shift and go to state 17
    BOOL            shift and go to state 18
    LET             shift and go to state 2
    ID              shift and go to state 3
    CONST           shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7

    bexpr                          shift and go to state 19
    expression                     shift and go to state 16

state 8

    (4) expression -> expression AOP . expression
    (1) expression -> . LET dexpr IN expression
    (2) expression -> . ID
    (3) expression -> . ID LPAREN aexpr RPAREN
    (4) expression -> . expression AOP expression
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . CONST
    (7) expression -> . ID ASSIGN expression
    (8) expression -> . expression SEMI expression
    (9) expression -> . IF bexpr THEN expression ELSE expression
    (10) expression -> . WHILE bexpr DO LBRACE expression RBRACE

    LET             shift and go to state 2
    ID              shift and go to state 3
    LPAREN          shift and go to state 4
    CONST           shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7

    expression                     shift and go to state 20

state 9

    (8) expression -> expression SEMI . expression
    (1) expression -> . LET dexpr IN expression
    (2) expression -> . ID
    (3) expression -> . ID LPAREN aexpr RPAREN
    (4) expression -> . expression AOP expression
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . CONST
    (7) expression -> . ID ASSIGN expression
    (8) expression -> . expression SEMI expression
    (9) expression -> . IF bexpr THEN expression ELSE expression
    (10) expression -> . WHILE bexpr DO LBRACE expression RBRACE

    LET             shift and go to state 2
    ID              shift and go to state 3
    LPAREN          shift and go to state 4
    CONST           shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7

    expression                     shift and go to state 21

state 10

    (1) expression -> LET dexpr . IN expression
    (14) dexpr -> dexpr . dexpr
    (13) dexpr -> . ID LPAREN vexpr RPAREN LBRACE expression RBRACE
    (14) dexpr -> . dexpr dexpr

    IN              shift and go to state 23
    ID              shift and go to state 11

    dexpr                          shift and go to state 22

state 11

    (13) dexpr -> ID . LPAREN vexpr RPAREN LBRACE expression RBRACE

    LPAREN          shift and go to state 24


state 12

    (3) expression -> ID LPAREN . aexpr RPAREN
    (11) aexpr -> . expression
    (12) aexpr -> . aexpr COMMA expression
    (1) expression -> . LET dexpr IN expression
    (2) expression -> . ID
    (3) expression -> . ID LPAREN aexpr RPAREN
    (4) expression -> . expression AOP expression
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . CONST
    (7) expression -> . ID ASSIGN expression
    (8) expression -> . expression SEMI expression
    (9) expression -> . IF bexpr THEN expression ELSE expression
    (10) expression -> . WHILE bexpr DO LBRACE expression RBRACE

    LET             shift and go to state 2
    ID              shift and go to state 3
    LPAREN          shift and go to state 4
    CONST           shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7

    aexpr                          shift and go to state 25
    expression                     shift and go to state 26

state 13

    (7) expression -> ID ASSIGN . expression
    (1) expression -> . LET dexpr IN expression
    (2) expression -> . ID
    (3) expression -> . ID LPAREN aexpr RPAREN
    (4) expression -> . expression AOP expression
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . CONST
    (7) expression -> . ID ASSIGN expression
    (8) expression -> . expression SEMI expression
    (9) expression -> . IF bexpr THEN expression ELSE expression
    (10) expression -> . WHILE bexpr DO LBRACE expression RBRACE

    LET             shift and go to state 2
    ID              shift and go to state 3
    LPAREN          shift and go to state 4
    CONST           shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7

    expression                     shift and go to state 27

state 14

    (5) expression -> LPAREN expression . RPAREN
    (4) expression -> expression . AOP expression
    (8) expression -> expression . SEMI expression

    RPAREN          shift and go to state 28
    AOP             shift and go to state 8
    SEMI            shift and go to state 9


state 15

    (9) expression -> IF bexpr . THEN expression ELSE expression
    (19) bexpr -> bexpr . LOP bexpr

    THEN            shift and go to state 29
    LOP             shift and go to state 30


state 16

    (20) bexpr -> expression . RELOP expression
    (4) expression -> expression . AOP expression
    (8) expression -> expression . SEMI expression

    RELOP           shift and go to state 31
    AOP             shift and go to state 8
    SEMI            shift and go to state 9


state 17

    (17) bexpr -> LPAREN . expression RPAREN
    (5) expression -> LPAREN . expression RPAREN
    (1) expression -> . LET dexpr IN expression
    (2) expression -> . ID
    (3) expression -> . ID LPAREN aexpr RPAREN
    (4) expression -> . expression AOP expression
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . CONST
    (7) expression -> . ID ASSIGN expression
    (8) expression -> . expression SEMI expression
    (9) expression -> . IF bexpr THEN expression ELSE expression
    (10) expression -> . WHILE bexpr DO LBRACE expression RBRACE

    LET             shift and go to state 2
    ID              shift and go to state 3
    LPAREN          shift and go to state 4
    CONST           shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7

    expression                     shift and go to state 32

state 18

    (18) bexpr -> BOOL .

    THEN            reduce using rule 18 (bexpr -> BOOL .)
    LOP             reduce using rule 18 (bexpr -> BOOL .)
    DO              reduce using rule 18 (bexpr -> BOOL .)


state 19

    (10) expression -> WHILE bexpr . DO LBRACE expression RBRACE
    (19) bexpr -> bexpr . LOP bexpr

    DO              shift and go to state 33
    LOP             shift and go to state 30


state 20

    (4) expression -> expression AOP expression .
    (4) expression -> expression . AOP expression
    (8) expression -> expression . SEMI expression

    AOP             reduce using rule 4 (expression -> expression AOP expression .)
    SEMI            reduce using rule 4 (expression -> expression AOP expression .)
    $end            reduce using rule 4 (expression -> expression AOP expression .)
    RPAREN          reduce using rule 4 (expression -> expression AOP expression .)
    RELOP           reduce using rule 4 (expression -> expression AOP expression .)
    COMMA           reduce using rule 4 (expression -> expression AOP expression .)
    ELSE            reduce using rule 4 (expression -> expression AOP expression .)
    THEN            reduce using rule 4 (expression -> expression AOP expression .)
    LOP             reduce using rule 4 (expression -> expression AOP expression .)
    DO              reduce using rule 4 (expression -> expression AOP expression .)
    RBRACE          reduce using rule 4 (expression -> expression AOP expression .)

  ! AOP             [ shift and go to state 8 ]
  ! SEMI            [ shift and go to state 9 ]


state 21

    (8) expression -> expression SEMI expression .
    (4) expression -> expression . AOP expression
    (8) expression -> expression . SEMI expression

    SEMI            reduce using rule 8 (expression -> expression SEMI expression .)
    $end            reduce using rule 8 (expression -> expression SEMI expression .)
    RPAREN          reduce using rule 8 (expression -> expression SEMI expression .)
    RELOP           reduce using rule 8 (expression -> expression SEMI expression .)
    COMMA           reduce using rule 8 (expression -> expression SEMI expression .)
    ELSE            reduce using rule 8 (expression -> expression SEMI expression .)
    THEN            reduce using rule 8 (expression -> expression SEMI expression .)
    LOP             reduce using rule 8 (expression -> expression SEMI expression .)
    DO              reduce using rule 8 (expression -> expression SEMI expression .)
    RBRACE          reduce using rule 8 (expression -> expression SEMI expression .)
    AOP             shift and go to state 8

  ! AOP             [ reduce using rule 8 (expression -> expression SEMI expression .) ]
  ! SEMI            [ shift and go to state 9 ]


state 22

    (14) dexpr -> dexpr dexpr .
    (14) dexpr -> dexpr . dexpr
    (13) dexpr -> . ID LPAREN vexpr RPAREN LBRACE expression RBRACE
    (14) dexpr -> . dexpr dexpr

  ! shift/reduce conflict for ID resolved as shift
    IN              reduce using rule 14 (dexpr -> dexpr dexpr .)
    ID              shift and go to state 11

  ! ID              [ reduce using rule 14 (dexpr -> dexpr dexpr .) ]

    dexpr                          shift and go to state 22

state 23

    (1) expression -> LET dexpr IN . expression
    (1) expression -> . LET dexpr IN expression
    (2) expression -> . ID
    (3) expression -> . ID LPAREN aexpr RPAREN
    (4) expression -> . expression AOP expression
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . CONST
    (7) expression -> . ID ASSIGN expression
    (8) expression -> . expression SEMI expression
    (9) expression -> . IF bexpr THEN expression ELSE expression
    (10) expression -> . WHILE bexpr DO LBRACE expression RBRACE

    LET             shift and go to state 2
    ID              shift and go to state 3
    LPAREN          shift and go to state 4
    CONST           shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7

    expression                     shift and go to state 34

state 24

    (13) dexpr -> ID LPAREN . vexpr RPAREN LBRACE expression RBRACE
    (15) vexpr -> . ID
    (16) vexpr -> . vexpr COMMA vexpr

    ID              shift and go to state 35

    vexpr                          shift and go to state 36

state 25

    (3) expression -> ID LPAREN aexpr . RPAREN
    (12) aexpr -> aexpr . COMMA expression

    RPAREN          shift and go to state 37
    COMMA           shift and go to state 38


state 26

    (11) aexpr -> expression .
    (4) expression -> expression . AOP expression
    (8) expression -> expression . SEMI expression

    RPAREN          reduce using rule 11 (aexpr -> expression .)
    COMMA           reduce using rule 11 (aexpr -> expression .)
    AOP             shift and go to state 8
    SEMI            shift and go to state 9


state 27

    (7) expression -> ID ASSIGN expression .
    (4) expression -> expression . AOP expression
    (8) expression -> expression . SEMI expression

    SEMI            reduce using rule 7 (expression -> ID ASSIGN expression .)
    $end            reduce using rule 7 (expression -> ID ASSIGN expression .)
    RPAREN          reduce using rule 7 (expression -> ID ASSIGN expression .)
    RELOP           reduce using rule 7 (expression -> ID ASSIGN expression .)
    COMMA           reduce using rule 7 (expression -> ID ASSIGN expression .)
    ELSE            reduce using rule 7 (expression -> ID ASSIGN expression .)
    THEN            reduce using rule 7 (expression -> ID ASSIGN expression .)
    LOP             reduce using rule 7 (expression -> ID ASSIGN expression .)
    DO              reduce using rule 7 (expression -> ID ASSIGN expression .)
    RBRACE          reduce using rule 7 (expression -> ID ASSIGN expression .)
    AOP             shift and go to state 8

  ! AOP             [ reduce using rule 7 (expression -> ID ASSIGN expression .) ]
  ! SEMI            [ shift and go to state 9 ]


state 28

    (5) expression -> LPAREN expression RPAREN .

    AOP             reduce using rule 5 (expression -> LPAREN expression RPAREN .)
    SEMI            reduce using rule 5 (expression -> LPAREN expression RPAREN .)
    $end            reduce using rule 5 (expression -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 5 (expression -> LPAREN expression RPAREN .)
    RELOP           reduce using rule 5 (expression -> LPAREN expression RPAREN .)
    COMMA           reduce using rule 5 (expression -> LPAREN expression RPAREN .)
    ELSE            reduce using rule 5 (expression -> LPAREN expression RPAREN .)
    THEN            reduce using rule 5 (expression -> LPAREN expression RPAREN .)
    LOP             reduce using rule 5 (expression -> LPAREN expression RPAREN .)
    DO              reduce using rule 5 (expression -> LPAREN expression RPAREN .)
    RBRACE          reduce using rule 5 (expression -> LPAREN expression RPAREN .)


state 29

    (9) expression -> IF bexpr THEN . expression ELSE expression
    (1) expression -> . LET dexpr IN expression
    (2) expression -> . ID
    (3) expression -> . ID LPAREN aexpr RPAREN
    (4) expression -> . expression AOP expression
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . CONST
    (7) expression -> . ID ASSIGN expression
    (8) expression -> . expression SEMI expression
    (9) expression -> . IF bexpr THEN expression ELSE expression
    (10) expression -> . WHILE bexpr DO LBRACE expression RBRACE

    LET             shift and go to state 2
    ID              shift and go to state 3
    LPAREN          shift and go to state 4
    CONST           shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7

    expression                     shift and go to state 39

state 30

    (19) bexpr -> bexpr LOP . bexpr
    (17) bexpr -> . LPAREN expression RPAREN
    (18) bexpr -> . BOOL
    (19) bexpr -> . bexpr LOP bexpr
    (20) bexpr -> . expression RELOP expression
    (1) expression -> . LET dexpr IN expression
    (2) expression -> . ID
    (3) expression -> . ID LPAREN aexpr RPAREN
    (4) expression -> . expression AOP expression
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . CONST
    (7) expression -> . ID ASSIGN expression
    (8) expression -> . expression SEMI expression
    (9) expression -> . IF bexpr THEN expression ELSE expression
    (10) expression -> . WHILE bexpr DO LBRACE expression RBRACE

    LPAREN          shift and go to state 17
    BOOL            shift and go to state 18
    LET             shift and go to state 2
    ID              shift and go to state 3
    CONST           shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7

    bexpr                          shift and go to state 40
    expression                     shift and go to state 16

state 31

    (20) bexpr -> expression RELOP . expression
    (1) expression -> . LET dexpr IN expression
    (2) expression -> . ID
    (3) expression -> . ID LPAREN aexpr RPAREN
    (4) expression -> . expression AOP expression
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . CONST
    (7) expression -> . ID ASSIGN expression
    (8) expression -> . expression SEMI expression
    (9) expression -> . IF bexpr THEN expression ELSE expression
    (10) expression -> . WHILE bexpr DO LBRACE expression RBRACE

    LET             shift and go to state 2
    ID              shift and go to state 3
    LPAREN          shift and go to state 4
    CONST           shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7

    expression                     shift and go to state 41

state 32

    (17) bexpr -> LPAREN expression . RPAREN
    (5) expression -> LPAREN expression . RPAREN
    (4) expression -> expression . AOP expression
    (8) expression -> expression . SEMI expression

    RPAREN          shift and go to state 42
    AOP             shift and go to state 8
    SEMI            shift and go to state 9


state 33

    (10) expression -> WHILE bexpr DO . LBRACE expression RBRACE

    LBRACE          shift and go to state 43


state 34

    (1) expression -> LET dexpr IN expression .
    (4) expression -> expression . AOP expression
    (8) expression -> expression . SEMI expression

  ! shift/reduce conflict for AOP resolved as shift
  ! shift/reduce conflict for SEMI resolved as shift
    $end            reduce using rule 1 (expression -> LET dexpr IN expression .)
    RPAREN          reduce using rule 1 (expression -> LET dexpr IN expression .)
    RELOP           reduce using rule 1 (expression -> LET dexpr IN expression .)
    COMMA           reduce using rule 1 (expression -> LET dexpr IN expression .)
    ELSE            reduce using rule 1 (expression -> LET dexpr IN expression .)
    THEN            reduce using rule 1 (expression -> LET dexpr IN expression .)
    LOP             reduce using rule 1 (expression -> LET dexpr IN expression .)
    DO              reduce using rule 1 (expression -> LET dexpr IN expression .)
    RBRACE          reduce using rule 1 (expression -> LET dexpr IN expression .)
    AOP             shift and go to state 8
    SEMI            shift and go to state 9

  ! AOP             [ reduce using rule 1 (expression -> LET dexpr IN expression .) ]
  ! SEMI            [ reduce using rule 1 (expression -> LET dexpr IN expression .) ]


state 35

    (15) vexpr -> ID .

    RPAREN          reduce using rule 15 (vexpr -> ID .)
    COMMA           reduce using rule 15 (vexpr -> ID .)


state 36

    (13) dexpr -> ID LPAREN vexpr . RPAREN LBRACE expression RBRACE
    (16) vexpr -> vexpr . COMMA vexpr

    RPAREN          shift and go to state 44
    COMMA           shift and go to state 45


state 37

    (3) expression -> ID LPAREN aexpr RPAREN .

    AOP             reduce using rule 3 (expression -> ID LPAREN aexpr RPAREN .)
    SEMI            reduce using rule 3 (expression -> ID LPAREN aexpr RPAREN .)
    $end            reduce using rule 3 (expression -> ID LPAREN aexpr RPAREN .)
    RPAREN          reduce using rule 3 (expression -> ID LPAREN aexpr RPAREN .)
    RELOP           reduce using rule 3 (expression -> ID LPAREN aexpr RPAREN .)
    COMMA           reduce using rule 3 (expression -> ID LPAREN aexpr RPAREN .)
    ELSE            reduce using rule 3 (expression -> ID LPAREN aexpr RPAREN .)
    THEN            reduce using rule 3 (expression -> ID LPAREN aexpr RPAREN .)
    LOP             reduce using rule 3 (expression -> ID LPAREN aexpr RPAREN .)
    DO              reduce using rule 3 (expression -> ID LPAREN aexpr RPAREN .)
    RBRACE          reduce using rule 3 (expression -> ID LPAREN aexpr RPAREN .)


state 38

    (12) aexpr -> aexpr COMMA . expression
    (1) expression -> . LET dexpr IN expression
    (2) expression -> . ID
    (3) expression -> . ID LPAREN aexpr RPAREN
    (4) expression -> . expression AOP expression
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . CONST
    (7) expression -> . ID ASSIGN expression
    (8) expression -> . expression SEMI expression
    (9) expression -> . IF bexpr THEN expression ELSE expression
    (10) expression -> . WHILE bexpr DO LBRACE expression RBRACE

    LET             shift and go to state 2
    ID              shift and go to state 3
    LPAREN          shift and go to state 4
    CONST           shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7

    expression                     shift and go to state 46

state 39

    (9) expression -> IF bexpr THEN expression . ELSE expression
    (4) expression -> expression . AOP expression
    (8) expression -> expression . SEMI expression

    ELSE            shift and go to state 47
    AOP             shift and go to state 8
    SEMI            shift and go to state 9


state 40

    (19) bexpr -> bexpr LOP bexpr .
    (19) bexpr -> bexpr . LOP bexpr

    THEN            reduce using rule 19 (bexpr -> bexpr LOP bexpr .)
    LOP             reduce using rule 19 (bexpr -> bexpr LOP bexpr .)
    DO              reduce using rule 19 (bexpr -> bexpr LOP bexpr .)

  ! LOP             [ shift and go to state 30 ]


state 41

    (20) bexpr -> expression RELOP expression .
    (4) expression -> expression . AOP expression
    (8) expression -> expression . SEMI expression

    THEN            reduce using rule 20 (bexpr -> expression RELOP expression .)
    LOP             reduce using rule 20 (bexpr -> expression RELOP expression .)
    DO              reduce using rule 20 (bexpr -> expression RELOP expression .)
    AOP             shift and go to state 8
    SEMI            shift and go to state 9


state 42

    (17) bexpr -> LPAREN expression RPAREN .
    (5) expression -> LPAREN expression RPAREN .

    THEN            reduce using rule 17 (bexpr -> LPAREN expression RPAREN .)
    LOP             reduce using rule 17 (bexpr -> LPAREN expression RPAREN .)
    DO              reduce using rule 17 (bexpr -> LPAREN expression RPAREN .)
    RELOP           reduce using rule 5 (expression -> LPAREN expression RPAREN .)
    AOP             reduce using rule 5 (expression -> LPAREN expression RPAREN .)
    SEMI            reduce using rule 5 (expression -> LPAREN expression RPAREN .)


state 43

    (10) expression -> WHILE bexpr DO LBRACE . expression RBRACE
    (1) expression -> . LET dexpr IN expression
    (2) expression -> . ID
    (3) expression -> . ID LPAREN aexpr RPAREN
    (4) expression -> . expression AOP expression
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . CONST
    (7) expression -> . ID ASSIGN expression
    (8) expression -> . expression SEMI expression
    (9) expression -> . IF bexpr THEN expression ELSE expression
    (10) expression -> . WHILE bexpr DO LBRACE expression RBRACE

    LET             shift and go to state 2
    ID              shift and go to state 3
    LPAREN          shift and go to state 4
    CONST           shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7

    expression                     shift and go to state 48

state 44

    (13) dexpr -> ID LPAREN vexpr RPAREN . LBRACE expression RBRACE

    LBRACE          shift and go to state 49


state 45

    (16) vexpr -> vexpr COMMA . vexpr
    (15) vexpr -> . ID
    (16) vexpr -> . vexpr COMMA vexpr

    ID              shift and go to state 35

    vexpr                          shift and go to state 50

state 46

    (12) aexpr -> aexpr COMMA expression .
    (4) expression -> expression . AOP expression
    (8) expression -> expression . SEMI expression

    RPAREN          reduce using rule 12 (aexpr -> aexpr COMMA expression .)
    COMMA           reduce using rule 12 (aexpr -> aexpr COMMA expression .)
    AOP             shift and go to state 8
    SEMI            shift and go to state 9


state 47

    (9) expression -> IF bexpr THEN expression ELSE . expression
    (1) expression -> . LET dexpr IN expression
    (2) expression -> . ID
    (3) expression -> . ID LPAREN aexpr RPAREN
    (4) expression -> . expression AOP expression
    (5) expression -> . LPAREN expression RPAREN
    (6) expression -> . CONST
    (7) expression -> . ID ASSIGN expression
    (8) expression -> . expression SEMI expression
    (9) expression -> . IF bexpr THEN expression ELSE expression
    (10) expression -> . WHILE bexpr DO LBRACE expression RBRACE

    LET             shift and go to state 2
    ID              shift and go to state 3
    LPAREN          shift and go to state 4
    CONST           shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7

    expression                     shift and go to state 51

state 48

    (10) expression -> WHILE bexpr DO LBRACE expression . RBRACE
    (4) expression -> expression . AOP expression
    (8) expression -> expression . SEMI expression

    RBRACE          shift and go to state 52
    AOP             shift and go to state 8
    SEMI            shift and go to state 9


state 49
